--- a/go/src/infra/appengine/dashboard/frontend/templates/pages/home.html
+++ b/go/src/infra/appengine/dashboard/frontend/templates/pages/home.html
@@ -12,7 +12,7 @@
   }
 </style>
 <body>
-  <chopsdash-app user="{{.User}}" is-googler="{{.IsGoogler}}" logout-url="{{.LogoutURL}}" login-url="{{.LoginURL}}">
+  <chopsdash-app user="{{.User}}" {{if .IsGoogler}}is-googler{{end}} logout-url="{{.LogoutURL}}" login-url="{{.LoginURL}}">
   </chopsdash-app>
 </body>
 <script>
